doc: add spark trino connection notebook