@@ -1,7 +1,12 @@
+-server
 -Xmx1G
+-XX:-UseBiasedLocking
 -XX:+UseG1GC
+-XX:G1HeapRegionSize=32M
 -XX:+ExplicitGCInvokesConcurrent
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:+UseGCOverheadLimit
 -XX:+ExitOnOutOfMemoryError
+-XX:ReservedCodeCacheSize=256M
 -Djdk.attach.allowAttachSelf=true
--Dnode.id=12345
--Dlog.levels-file=/etc/trino/log.properties
+-Djdk.nio.maxCachedBufferSize=2000000
